[tool.poetry]
name = "reinforcement-learning"
version = "0.1.0"
description = ""
authors = ["DonBraulio <braulioriosf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"
ipdb = "^0.13.2"
jupyter = "^1.0.0"
gym = "^0.17.1"
ray = {version = "0.8.3", extras = ["rllib"]}
torch = "^1.4.0"
pandas = "^1.0.3"
opencv-python = "^4.2.0"
cython = "0.29.0"
pytest = "^5.4.1"
torchvision = "^0.6.0"
filelock = "^3.0.12"
tensorflow-estimator = "2.1.0"
tensorflow = "2.1.0"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
